# bipp

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/build_tools/: build_wheels.sh  install_cufinufft.sh  install_finufft.sh  install_neonufft.sh  install_neonufft_cuda.sh  repair_exclude_cuda.sh
.github/workflows/: ci.yml  wheels.yml  wheels_cuda.yml
ci/: base_cuda.Dockerfile  build.Dockerfile  build_library.Dockerfile  build_python_module.Dockerfile  cscs.yaml  cscs.yml
cmake/: bippConfig.cmake  bippConfigVersion.cmake  bippSharedConfig.cmake  bippStaticConfig.cmake  bippTargets.cmake
cmake/modules/: FindCUFINUFFT.cmake  FindFFTW.cmake  FindFFTWF.cmake  FindFINUFFT.cmake  FindMAGMA.cmake
docs/: Doxyfile  Makefile  requirements.txt
docs/source/: bipp_c.rst  conf.py  context.rst  eigendecomposition.rst  exceptions.rst  index.rst  nufft_synthesis.rst  python.rst  standard_synthesis.rst  synthesis.rst
examples/real_data/: MWA_nufft.py  bipp_main.py  create_dataset.py  create_image_prop.py  create_selection.py  image_synthesis.py  plot_images.py  realData.py  skalow_bipp.py  test.py  test2.py  test3.py
examples/simulation/: lofar_bootes_nufft.py  lofar_bootes_ss.py  test_image_reader.py  test_reader.py  test_writer.py
include/bipp/: bipp.h  bipp.hpp  communicator.hpp  config.h.in  context.hpp  dataset.hpp  dataset_creator.hpp  dataset_file.hpp  dataset_reader.hpp  enums.h  errors.h  exceptions.hpp  image.hpp  image_data.hpp  image_data_file.hpp  image_file.hpp  image_prop.hpp  image_prop_file.hpp  image_reader.hpp  image_synthesis.hpp  nufft_synthesis.hpp  standard_synthesis.hpp
python/: CMakeLists.txt  pybipp.cpp
python/bipp/: __init__.py  __main__.py  array.py  beamforming.py  core.py  cudf.py  dask_ms.py  example.py  filter.py  frame.py  gram.py  instrument.py  measurement_set.py  newmeasurementset.py  numpy_compat.py  parameter_estimator.py  selection.py  source.py  statistics.py
python/bipp/apps/: cli.py  create_dataset.py  create_image_prop.py  create_selection.py  image_synthesis.py  plot_images.py
python/bipp/data/instrument/: LOFAR.csv  MWA.csv
python/bipp/imot_tools/: __init__.py
python/bipp/imot_tools/data/io/: imot_tools.mplstyle
python/bipp/imot_tools/data/io/colormap/: algue.csv  aqua.csv  fire.csv  jet_alt.csv  lightbulb.csv
python/bipp/imot_tools/data/math/special/: ive_threshold.csv  jv_series_threshold.csv  jv_threshold.csv  spherical_jn_series_threshold.csv  spherical_jn_threshold.csv
python/bipp/imot_tools/io/: __init__.py  s2image.py
python/bipp/imot_tools/math/: __init__.py  func.py  linalg.py  stat.py
python/bipp/imot_tools/math/sphere/: __init__.py  grid.py  interpolate.py  transform.py
python/bipp/imot_tools/phased_array/: __init__.py
python/bipp/imot_tools/util/: __init__.py  argcheck.py  array.py
python/bipptest/: __init__.py  array.py  gram.py
python/bipptest/imot_tools/data/io/colormap/: lava.csv
python/bipptest/imot_tools/io/: fits.py  plot.py  s2image.py
python/bipptest/imot_tools/math/: special.py
scripts/: python_install_path.py
src/: CMakeLists.txt  collector_interface.hpp  communicator.cpp  communicator_internal.cpp  communicator_internal.hpp  context.cpp  context_internal.cpp  context_internal.hpp  dataset_creator.cpp  dataset_file.cpp  dataset_reader.cpp  distributed_synthesis.cpp  distributed_synthesis.hpp  eigensolver.cpp  gram_matrix.cpp  image_data_file.cpp  image_file.cpp  image_prop_file.cpp  image_reader.cpp  image_synthesis.cpp  imager.cpp  imager.hpp  logger.cpp  logger.hpp  nufft_interface.hpp  nufft_synthesis.cpp  nufft_synthesis.hpp  nufft_util.hpp  rt_graph.cpp  rt_graph.hpp  standard_synthesis.cpp  synthesis_factory.cpp  synthesis_factory.hpp  synthesis_interface.hpp  test_hdf5.cpp
src/apps/: CMakeLists.txt  bipp_synthesis.cpp
src/gpu/: collector.cpp  collector.hpp  domain_partition.cu  domain_partition.hpp  eigensolver.cpp  eigensolver.hpp  gram_matrix.cpp  gram_matrix.hpp  nufft.hpp  nufft_3d3.cpp  nufft_3d3.hpp  nufft_synthesis.cpp  nufft_synthesis.hpp  standard_synthesis.cpp  standard_synthesis.hpp  virtual_vis.cpp  virtual_vis.hpp
src/gpu/kernels/: add_vector.cu  add_vector.hpp  apply_filter.cu  apply_filter.hpp  center_vector.cu  center_vector.hpp  copy_at_indices.cu  copy_at_indices.hpp  gemmexp.cu  gemmexp.hpp  gram.cu  gram.hpp  init_vector.cu  init_vector.hpp  min_max_element.cu  min_max_element.hpp  nuft_sum.cu  nuft_sum.hpp  reverse.cu  reverse.hpp  scale_matrix.cu  scale_matrix.hpp  scale_vector.cu  scale_vector.hpp
src/gpu/util/: blas_api.hpp  cub_api.hpp  device_accessor.hpp  device_guard.hpp  device_pointer.hpp  kernel_launch_grid.hpp  queue.hpp  runtime.hpp  runtime_api.hpp  solver_api.cpp  solver_api.hpp
src/host/: blas_api.hpp  collector.cpp  collector.hpp  domain_partition.hpp  eigensolver.cpp  eigensolver.hpp  gram_matrix.cpp  gram_matrix.hpp  lapack_api.hpp  nufft.hpp  nufft_3d3.cpp  nufft_3d3.hpp  nufft_synthesis.cpp  nufft_synthesis.hpp  omp_definitions.hpp  standard_synthesis.cpp  standard_synthesis.hpp  uvw_partition.hpp  virtual_vis.cpp  virtual_vis.hpp
src/host/kernels/: apply_filter.hpp  gemmexp.cpp  gemmexp.hpp  interval_indices.hpp  nuft_sum.cpp  nuft_sum.hpp
src/io/: dataset_file_reader.cpp  dataset_file_reader.hpp  dataset_file_writer.cpp  dataset_file_writer.hpp  dataset_reader.cpp  dataset_reader.hpp  dataset_spec.hpp  dataset_writer.cpp  dataset_writer.hpp  h5_util.hpp  image_file_reader.cpp  image_file_reader.hpp  image_file_writer.cpp  image_file_writer.hpp
src/memory/: allocator.hpp  allocator_factory.cpp  allocator_factory.hpp  array.hpp  buffer.hpp  copy.hpp  pool_allocator.hpp  umpire_allocator.hpp  view.hpp
src/mpi_util/: mpi_check_status.hpp  mpi_comm_handle.hpp  mpi_data_type.hpp  mpi_init_guard.cpp  mpi_init_guard.hpp
tests/: CMakeLists.txt  test_domain_partition.cpp  test_nufft_synthesis_lofar.cpp  test_standard_synthesis_lofar.cpp
tests/data/: lofar_input.json  lofar_ss_output_double.json  lofar_ss_output_single.json
